[package]
name = "tasru"
version = "0.3.2"
edition = "2021"
description = "A method to map and understand dwarf symbol information"
license = "Apache-2.0"

[dependencies]
gimli = { version = "0.31", features = ["endian-reader", "read", "std"] }
object = { version = "0.36", features = ["elf", "read_core", "std"] }
rustc-demangle = "0.1.24"
